# lumium

./: .gitignore  .gitmodules  .slugignore  Aptfile  CONTRIBUTING.md  Makefile  README.md  app.json  git-conventional-commits.json  nx.json  package-lock.json  package.json  test
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: api-unit.yml  ci.yml  codeql-analysis.yml  dashboard-e2e.yml  dashboard-unit.yml  heroku-review-app-management.yml  issues-to-project.yml  lumium-renderer.yml  nxcloud.yml  prs-to-project.yml  release.yml  space-e2e.yml  space-unit.yml  tests.yml
.husky/: commit-msg
docs/: CHANGELOG.md
lumium-api/: .env.development  .env.review  .env.test  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  build.rs  main.rs  package.json  serde-crypt  sqlx-data.json  state.rs  tsconfig.json
lumium-api/curl/: signin.sh  signup.sh
lumium-api/migrations/: 001_init.down.sql  001_init.up.sql
lumium-api/routes/: auth.rs  guard.rs  mod.rs  profile.rs  root.rs  stat.rs  workspace.rs
lumium-api/scripts/: generate-next-migration.sh  localEnv.sh  psql.sh
lumium-api/services/: mod.rs  password.rs  profile.rs  session.rs  workspace.rs
lumium-api/src/: app.spec.ts  app.ts  crypto.ts  cypto.ts  data-source.ts  index.ts  main.rs
lumium-api/src/controller/: UserController.ts
lumium-api/src/controllers/: auth.ts  index.ts  page.ts  pingpong.spec.ts  user.ts  workspace.ts
lumium-api/src/controllers/page/: index.ts
lumium-api/src/controllers/user/: index.ts  user.spec.ts
lumium-api/src/controllers/workspace/: index.ts
lumium-api/src/entity/: AbstractEntity.ts  Address.ts  Audit.ts  AuditEntry.ts  AuthenticationInformation.ts  BlacklistedToken.ts  ContentElement.ts  E2EKey.ts  E2EKeyVariant.ts  Email.ts  Page.ts  PageContent.ts  User.ts  UserPreference.ts  UserPreferences.ts  Workspace.ts  WorkspacePreference.ts  WorkspacePreferences.ts  WorkspaceSecret.ts
lumium-api/src/migration/: 1664171228069-initial.ts  1664313032991-user-signup-flow.ts  1664542491062-e2e-tables.ts  1664542689630-remove-old-user-table.ts  1664748956630-end-to-end-implementation.ts  1665563811131-recent-workspace.ts  1666191331711-delete-workspace.ts  1666318704980-sync.ts  1668208914317-nonces.ts  1671050918560-keys.ts  1671052377954-workspace-page-name.ts  1671366169867-initial.ts  1671394481612-token-blacklist.ts  1671441230539-token-blacklist-cascade.ts  1671442474951-initial.ts  1671487559078-test.ts  1671981988404-page.ts  1672340848633-initial.ts  1673635789977-audit-entry-types.ts
lumium-api/src/routes/: index.ts
lumium-api/src/routes/v1/: index.ts
lumium-api/src/routes/v1/public/: auth.ts  index.ts  ping.spec.ts
lumium-api/src/routes/v1/secure/: auth.ts  index.ts  page.ts  pong.spec.ts  user.spec.ts  user.ts  workspace.spec.ts  workspace.ts
lumium-api/src/routes/v1/secure/page/: index.ts
lumium-api/src/routes/v1/secure/user/: index.ts  user.spec.ts
lumium-api/src/routes/v1/secure/workspace/: index.ts  workspace.spec.ts
lumium-api/test/: helpers.d.ts  jest-teardown-globals.ts  jest.config.js  jest.setup.ts  tsconfig.test.json
lumium-api/tests/: auth.rest  root.rest
lumium-dashboard/: Procfile  README.MD  cypress.json  package.json  tsconfig.json
lumium-dashboard/cypress/integration/: main.spec.ts
lumium-dashboard/pages/: _app.tsx  index.tsx
lumium-dashboard/public/: meta.json
lumium-dashboard/src/redux/: actions.spec.ts
lumium-dashboard/test/: index.tsx
lumium-renderer/: .env.development  .env.review  Cargo.toml  build.rs  crypto.rs  lib.rs  request.rs  serde-crypt-macro  transfer
lumium-renderer/js/: download.js
lumium-renderer/scripts/: build.sh  test.sh
lumium-renderer/src/: crypto.rs  dtos.rs  lib.rs  render.rs
lumium-renderer/tests/: web.rs
lumium-space/: .env.development  .env.review  .env.test  .gitignore  Dockerfile  Procfile  README.md  cypress.config.ts  cypress.json  lumium-renderer  next.config.js  package-lock.json  package.json  tsconfig.json
lumium-space/config/: appInfo.ts  frontendConfig.tsx
lumium-space/cypress/: tsconfig.json
lumium-space/cypress/downloads/: lumium_recovery_codes.txt
lumium-space/cypress/e2e/: auth_reset-password.cy.ts  auth_signin.cy.ts  auth_signup.cy.ts  redirection.cy.ts  root.cy.ts  spaces_create.cy.ts  spaces_join.cy.ts  spaces_new.cy.ts  spaces_overview.cy.ts
lumium-space/cypress/integration/: account-page.spec.ts  auth-page.spec.ts  auth.spec.ts  auth_reset-password.spec.ts  auth_signin.spec.ts  auth_signup.spec.ts  landing-page.spec.ts  main.spec.ts  manage-spaces-page.spec.ts  page.spec.ts
lumium-space/cypress/plugins/: index.js
lumium-space/cypress/support/: commands.ts  e2e.ts  index.ts  makeid.ts
lumium-space/lumium-renderer/: .appveyor.yml  Cargo.toml  LICENSE_MIT
lumium-space/lumium-renderer/src/: lib.rs
lumium-space/pages/: [[...path]].tsx  _app.tsx  _document.tsx  _middleware.tsx  account.tsx  index.tsx
lumium-space/pages/[workspaceId]/: [[...pageId]].tsx  [pageId].tsx  index.tsx
lumium-space/pages/[workspaceUUID]/: [pageUUID].tsx  index.tsx
lumium-space/pages/account/: [[...path]].tsx  index.tsx
lumium-space/pages/account.tsx/: index.tsx
lumium-space/pages/auth/: [[...path]].tsx  reset-password.tsx  signin.tsx  signup.tsx  verify-email.tsx  verify.tsx
lumium-space/pages/page/: [[...path]].tsx  [uuid].tsx
lumium-space/pages/space-manager/: [[...path]].tsx
lumium-space/pages/spaces/: [[...path]].tsx  create.tsx  join.tsx  new.tsx  overview.tsx
lumium-space/pages/workspace/: index.ts
lumium-space/public/: meta.json
lumium-space/routes/: constants.ts
lumium-space/scripts/: build-renderer.sh  docker-entry.sh  rust-toolchain.sh  toolchain.sh
lumium-space/src/components/: index.ts
lumium-space/test/: index.tsx  jest.config.js
lumium-space/types/: index.ts
routes/space/: index.ts
scripts/: add-cloudflare-dns.sh  build.sh  dockerize.sh  reduce-slug-size-heroku.sh  remove-cloudflare-dns.sh  toolchain.sh
transfer/: auth.rs  constants.rs  e2ekeys.rs  macros.rs  mod.rs  page.rs  workspace.rs
types/: index.ts
types/api/: index.ts
(+160 files in other folders)
