# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "lumium-api"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "lumium-api"
path = "./main.rs"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
axum = { version = "0.6.2", features = ["macros", "headers"] }
axum-extra = { version = "0.4.2", features = ["cookie-signed"] }
tower-http = { version = "0.4.0", features = ["cors"] }
wasm-bindgen = { version = "0.2.80" }
serde = { version = "1.0.152" }
serde-wasm-bindgen = "0.4"
serde-crypt = { path = "../vendor/serde-crypt" }
serde-crypt-macro = { path = "../vendor/serde-crypt-macro" }
serde_json = { version = "1.0.91" }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "offline",
    "ipnetwork",
] }
argon2 = { version = "0.4.1" }
async-trait = { version = "0.1.61" }
utoipa = { version = "3.2.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.2", features = ["axum"] }
dotenvy = "0.15.6"
paste = "1.0.12"
tsify = "0.4.3"

[build-dependencies]
sqlx-cli = { version = "0.6.2", features = [
    "rustls",
    "postgres",
], default-features = false }
