[package]
name = "lumium-renderer"
version = "0.1.0"
authors = ["Cedric Schwyter <cedricschwyter@bluewin.ch>"]
edition = "2018"
description = "next level docs"
repository = "https://github.com/lumium-technologies/lumium.git"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.80" }
pulldown-cmark = "0.9.1"
js-sys = "0.3.57"
seed = "0.9.1"
katex-renderer = { path = "./katex-renderer", features = ["wasm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.89"
ring = { version = "0.16.8", features = ["wasm32_c"] }
passwords = "3.1.9"
base64 = "0.20.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CssStyleDeclaration',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlButtonElement',
    'HtmlParagraphElement',
    'Node',
    'Window',
    'console',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"

[build-dependencies]
dotenv = "0.15.0"
