[package]
name = "lumium-renderer"
version = "0.1.0"
authors = ["Cedric Schwyter <cedricschwyter@bluewin.ch>"]
edition = "2021"
description = "next level docs"
repository = "https://github.com/lumium-technologies/lumium.git"
license = "GPL-3.0-or-later"

[lib]
path = "./lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.80" }
pulldown-cmark = "0.9.1"
js-sys = "0.3.57"
seed = "0.9.1"
katex-renderer = { path = "../vendor/katex-renderer", features = [
    "wasm",
], default-features = false }
serde-crypt = { path = "./serde-crypt" }
serde-crypt-macro = { path = "./serde-crypt-macro" }
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
ring = { version = "0.16.20", features = ["wasm32_c"] }
passwords = "3.1.9"
base64 = "0.21.0"
utoipa = { version = "3.2.1", features = ["axum_extras"] }
once_cell = "1.17.1"
paste = "1.0.12"
ts-rs = { version = "6.2.1", features = ["serde-compat"] }
tsify = "0.4.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CssStyleDeclaration',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlButtonElement',
    'HtmlParagraphElement',
    'Node',
    'Window',
    'Storage',
    'console',
    'Headers',
    'Request',
    'RequestCredentials',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"

[build-dependencies]
dotenvy = "0.15.6"
