[package]
name = "lumium-renderer"
version = "0.1.0"
authors = ["Cedric Schwyter <cedricschwyter@bluewin.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
pulldown-cmark = "0.9.1"
js-sys = "0.3.57"
katex = { version = "0.4.4", features = ['wasm-js'], default-features = false}
seed = "0.9.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CssStyleDeclaration',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlButtonElement',
    'HtmlParagraphElement',
    'Node',
    'Window',
    'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
